vertex colors not shown in texture mode #48728

Closed
opened 2016-06-24 13:10:45 +02:00 by Ivan Cappiello · 25 comments
Member

System Information
Operating system and graphics card

Blender Version
Broken: 2.77 a8898d3,
Worked: 2.76b

vertex colors are not displayed in texture mode when viewport is set on multitexture .

open the attached .blend file with both blender versions to reproduce the error

test_texture.blend

**System Information** Operating system and graphics card **Blender Version** Broken: 2.77 a8898d3, Worked: 2.76b vertex colors are not displayed in texture mode when viewport is set on multitexture . open the attached .blend file with both blender versions to reproduce the error [test_texture.blend](https://archive.blender.org/developer/F318539/test_texture.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @icappiello

Added subscriber: @icappiello
Author
Member

Added subscriber: @fsiddi

Added subscriber: @fsiddi

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

I can confirm that for BI and Cycles in Textured mode (compared to 2.76b):

  • Blender Internal: vertex colors are not showing in Object, Sculpt and Vertex Paint modes, but are shown in Edit Mode.
  • Cycles: Vertex colors are not showing in Object, Sculpt and Edit Modes, but are shown in Vertex Paint mode with proper gradients. I have noticed that in Material view vertex colors look differrently from other modes (sRGB space?) This heavily affects gradients from vertex to vertex, making them very pale.

Haven't noticed anything suspicious in the console so far.

I can confirm that for BI and Cycles in Textured mode (compared to 2.76b): - Blender Internal: vertex colors are not showing in Object, Sculpt and Vertex Paint modes, but are shown in Edit Mode. - Cycles: Vertex colors are not showing in Object, Sculpt and Edit Modes, but are shown in Vertex Paint mode with proper gradients. I have noticed that in Material view vertex colors look differrently from other modes (sRGB space?) This heavily affects gradients from vertex to vertex, making them very pale. Haven't noticed anything suspicious in the console so far.

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2016-06-24 15:02:00 +02:00

@SpectreFirst not sure what you are saying here (vertex colors are not showing in Object, Sculpt and Vertex Paint modes seriously?), please do not add confusion to reports, your comments sound more like another issue not directly related to originally reported one.

@icappiello This 'feature' was purposely removed from master a few weeks ago (by @ideasman42 iirc) - it did not really make sense to systematically show vcol in texture paint mode, and was actually often annoying. You can still see those if you enable vcols in your material and switch to material preview mode.

@SpectreFirst not sure what you are saying here (*vertex colors are not showing in Object, Sculpt and **Vertex Paint modes*** seriously?), please do not add confusion to reports, your comments sound more like another issue not directly related to originally reported one. @icappiello This 'feature' was purposely removed from master a few weeks ago (by @ideasman42 iirc) - it did not really make sense to systematically show vcol in texture paint mode, and was actually often annoying. You can still see those if you enable vcols in your material and switch to material preview mode.

Sorry if I wasn't clear enough, but that's what I see when I'm switching interaction modes in Textured viewport shading. Probably should have added pictures in the first place. The planes on these pictures are the same object in different modes.
{F318548}rect4226a.png
Provided test file behave the same as my tests so I thought that I should add which modes display vertex colors and which ones don't. If this information is not useful anymore then you can just ignore it, but I honestly don't see any particular harm in my observations as well. Vertex color gradients are indeed a different issue, but I'm not sure if this is worth creating a separate report because I'm not sure if this is an actual issue or not.

Sorry if I wasn't clear enough, but that's what I see when I'm switching interaction modes in Textured viewport shading. Probably should have added pictures in the first place. The planes on these pictures are the same object in different modes. {[F318548](https://archive.blender.org/developer/F318548/rect4225a.png)}![rect4226a.png](https://archive.blender.org/developer/F318550/rect4226a.png) Provided test file behave the same as my tests so I thought that I should add which modes display vertex colors and which ones don't. If this information is not useful anymore then you can just ignore it, but I honestly don't see any particular harm in my observations as well. Vertex color gradients are indeed a different issue, but I'm not sure if this is worth creating a separate report because I'm not sure if this is an actual issue or not.
Author
Member

In #48728#379369, @mont29 wrote:
This 'feature' was purposely removed from master a few weeks ago (by @ideasman42 iirc) - it did not really make sense to systematically show vcol in texture paint mode, and was actually often annoying.

@mont29 it doesn't make sense for me now since texture applied to uvs without material are instead correctly displayed. Vertex colors have no different use in that case but are displayed as a blank white shadeless object (not very useful at all).

In #48728#379369, @mont29 wrote:
You can still see those if you enable vcols in your material and switch to material preview mode.

@mont29 yeah, i could, but in a complex scene where lots materials are linked, you are suggesting to let blender viewport compute all of them (affecting severely the performance) when the only thing i have to see are the vertex colors. I don't think it's very handy. And i can't honestly see the benefit of removing this feature and make textures and vcols (both used to color the object) behave differently in the viewport.

> In #48728#379369, @mont29 wrote: > This 'feature' was purposely removed from master a few weeks ago (by @ideasman42 iirc) - it did not really make sense to systematically show vcol in texture paint mode, and was actually often annoying. @mont29 it doesn't make sense for me now since texture applied to uvs without material are instead correctly displayed. Vertex colors have no different use in that case but are displayed as a blank white shadeless object (not very useful at all). > In #48728#379369, @mont29 wrote: >You can still see those if you enable vcols in your material and switch to material preview mode. @mont29 yeah, i could, but in a complex scene where lots materials are linked, you are suggesting to let blender viewport compute all of them (affecting severely the performance) when the only thing i have to see are the vertex colors. I don't think it's very handy. And i can't honestly see the benefit of removing this feature and make textures and vcols (both used to color the object) behave differently in the viewport.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Bastien Montagne was unassigned by Campbell Barton 2016-06-27 11:29:46 +02:00
Campbell Barton self-assigned this 2016-06-27 11:29:46 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Actually, was @Sergey 's commit, 03f846ea.

Actually, was @Sergey 's commit, 03f846ea.
Campbell Barton was unassigned by Sergey Sharybin 2016-06-28 12:09:09 +02:00
Sergey Sharybin self-assigned this 2016-06-28 12:09:09 +02:00

If it's really supposed to show vertex color in textured view simplest way to go would be to add DM_DRAW_USE_COLORS to flags in draw_mesh_textured_old() in cases when object is not in texture paint mode.

But my question is: is it indeed supposed to always use vertex color in texture view?

If it's really supposed to show vertex color in textured view simplest way to go would be to add `DM_DRAW_USE_COLORS` to flags in `draw_mesh_textured_old()` in cases when object is not in texture paint mode. But my question is: is it indeed supposed to always use vertex color in texture view?
Author
Member

In #48728#379802, @Sergey wrote:
But my question is: is it indeed supposed to always use vertex color in texture view?

@Sergey, my point is: if you are using vertex colors to color your object, then they have to be shown in texture mode just as you would expect using a texture to color the object.
No material is required to show a texture, and no material should be needed to show the vcols.
If you are not using vertex colors, no harm could be done because they would not be shown anyway.
This is also rhe way it was always used in the blender viewport.
If the removal is so important, then at least a flag in the view 3D has to be present to show them. Again, my point is: what's the benefit of remiving it from the viewport itself breaking existing workflow when the problem is only affecting the texture paint mode?

> In #48728#379802, @Sergey wrote: > But my question is: is it indeed supposed to always use vertex color in texture view? @Sergey, my point is: if you are using vertex colors to color your object, then they have to be shown in texture mode just as you would expect using a texture to color the object. No material is required to show a texture, and no material should be needed to show the vcols. If you are not using vertex colors, no harm could be done because they would not be shown anyway. This is also rhe way it was always used in the blender viewport. If the removal is so important, then at least a flag in the view 3D has to be present to show them. Again, my point is: what's the benefit of remiving it from the viewport itself breaking existing workflow when the problem is only affecting the texture paint mode?

I'm not sure if I understood the question correctly, but as far as I can understand, it boils down to what to display in Object and Sculpt modes when Diffuse color, image texture and vertex colors are presented.

I did some tests in 2.77a in Textured Solid Object mode and it work like this:

  • Material's Diffuse color when no image or vertex colors are presented
  • Vertex colors when image is not directly assigned to faces in Edit Mode
  • Image multiplied by vertex colors when image is directly assigned to faces in Edit Mode
  • Image multiplied by vertex colors in Vertex Paint mode when image is directly assigned to faces in Edit Mode
  • Image in Texture Paint mode which is multiplied by vertex colors when "Face selection masking for painting" is turned on.

I can understand how it can cause problems so maybe it would be possible to do this:

  • Material's Diffuse color when no image or vertex colors are presented
  • Vertex colors only when image is not directly assigned to faces in Edit Mode
  • Image only when image is directly assigned to faces in Edit Mode
  • Only vertex colors in Vertex Paint mode
  • Only image in Texture Paint mode regardless of "Face selection masking for painting" option.

This is obviously not an ideal solution and can be counterintuitive, but at least it will separate image and vertex colors and we won't lose the ability to see vertex colors in Textured Solid modes. I'm not sure if that makes sense so this is just my thoughts.

I'm not sure if I understood the question correctly, but as far as I can understand, it boils down to what to display in Object and Sculpt modes when Diffuse color, image texture and vertex colors are presented. I did some tests in 2.77a in Textured Solid Object mode and it work like this: - Material's Diffuse color when no image or vertex colors are presented - Vertex colors when image is not directly assigned to faces in Edit Mode - Image multiplied by vertex colors when image is directly assigned to faces in Edit Mode - Image multiplied by vertex colors in Vertex Paint mode when image is directly assigned to faces in Edit Mode - Image in Texture Paint mode which is multiplied by vertex colors when "Face selection masking for painting" is turned on. I can understand how it can cause problems so maybe it would be possible to do this: - Material's Diffuse color when no image or vertex colors are presented - Vertex colors only when image is not directly assigned to faces in Edit Mode - Image only when image is directly assigned to faces in Edit Mode - Only vertex colors in Vertex Paint mode - Only image in Texture Paint mode regardless of "Face selection masking for painting" option. This is obviously not an ideal solution and can be counterintuitive, but at least it will separate image and vertex colors and we won't lose the ability to see vertex colors in Textured Solid modes. I'm not sure if that makes sense so this is just my thoughts.

This issue was referenced by 2f532c7844

This issue was referenced by 2f532c78445a9de1e64014468049649ac1de39f1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

I've just tested the latest build 9d5661c and it looks like the problem wasn't solved completely: object's diffuse color is now updating properly, but both diffuse color and vertex colors are only shown when object is actively selected. If many objects are selected, only the active one will display colors properly, others will show plain gray.

  1. Create a Cube and add material with Diffuse color or paint some vertices in vertex paint mode.
  2. Switch to Texture shading and add another primitive or select another object (for example default lamp or camera) and object will turn gray.
I've just tested the latest build 9d5661c and it looks like the problem wasn't solved completely: object's diffuse color is now updating properly, but both diffuse color and vertex colors are only shown when object is actively selected. If many objects are selected, only the active one will display colors properly, others will show plain gray. 1. Create a Cube and add material with Diffuse color or paint some vertices in vertex paint mode. 2. Switch to Texture shading and add another primitive or select another object (for example default lamp or camera) and object will turn gray.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

This issue was referenced by 260da0cd91

This issue was referenced by 260da0cd9159bc2ea685f4cf03f131dc24e37db6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Tested 4b0aeaf and most combinations of modes work normally except strange behaviour in Sculpting mode which doesn't update material’s diffuse color properly:

  1. Set some vivid color to default Cube's material diffuse color and turn Textured Solid mode.
  2. If you switch to Sculpting mode right away, diffuse color will remain, but if you switch to Edit Mode and then to Sculpt mode, in Sculpt mode object’s color will become gray. Switching to Object mode and then back to Sculpt mode will bring diffuse color back.
  3. I have also noticed that if you'll try to change diffuse color while in Sculpt mode, it will not update just like in previous versions.
Tested 4b0aeaf and most combinations of modes work normally except strange behaviour in Sculpting mode which doesn't update material’s diffuse color properly: 1. Set some vivid color to default Cube's material diffuse color and turn Textured Solid mode. 2. If you switch to Sculpting mode right away, diffuse color will remain, but if you switch to Edit Mode and then to Sculpt mode, in Sculpt mode object’s color will become gray. Switching to Object mode and then back to Sculpt mode will bring diffuse color back. 3. I have also noticed that if you'll try to change diffuse color while in Sculpt mode, it will not update just like in previous versions.

Just in case my previous report was lost in a traffic: tested b27322e and Diffuse color in Sculpting mode is still not updating properly in BI Textured Solid mode. Not a big problem perhaps, but can be quite annoying because you have to switch back and forth between Sculpt and Object mode to see Diffuse color update.

Just in case my previous report was lost in a traffic: tested b27322e and Diffuse color in Sculpting mode is still not updating properly in BI Textured Solid mode. Not a big problem perhaps, but can be quite annoying because you have to switch back and forth between Sculpt and Object mode to see Diffuse color update.

@SpectreFirst, this is why it is important to create mew reports instead of re-summoning old ones. So please go ahead and submit a new report with the steps and probably .blend file.

@SpectreFirst, this is why it is important to create mew reports instead of re-summoning old ones. So please go ahead and submit a new report with the steps and probably .blend file.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48728
No description provided.