Fix T48728, part 2: Vertex colors not shown in texture mode